# Multi-Agent-Legal-AI-Assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  Procfile  README.md  docker-compose.yml  railway.json  requests.http  requirements.txt  vercel.json
backend/: .env.example  .railwayignore  Procfile  __init__.py  llm.py  pyproject.toml  railway.json  requirements.txt  setup.py
backend/agents/: compliance.py  graph.py  junior.py  senior.py
backend/api/: main.py
backend/memory/: models.py  store.py
backend/observability/: logging.py
backend/rag/: chunking.py  embeddings.py  retrieval.py
backend/security/: auth.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/lib/: api.ts
tests/: conftest.py  test_app.py  test_llm_agents.py
tests/data/: sample.txt
