[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'legal-multi-agent-backend'
version = '0.1.0'
description = 'Legal multi-agent RAG backend'
requires-python = '>=3.10'
dependencies = [
    'fastapi',
    'uvicorn[standard]',
    'langgraph',
    'openai>=1.2.3',
    'qdrant-client>=1.7.0',
    'redis>=5.0.1',
    'psycopg[binary]>=3.1.10',
    'sqlalchemy>=2.0.20',
    'alembic>=1.12.0',
    'asyncpg>=0.29.0',
    'httpx',
    'python-dotenv',
    'pydantic',
    'pydantic-settings',
    'tenacity',
    'rank-bm25',
    'numpy',
    'scikit-learn',
    'tiktoken',
    'pytest',
    'pytest-asyncio',
    'httpx[http2]',
    'sqlalchemy-utils',
    'uuid6',
    'structlog',
    'anyio',
    'python-multipart',
    'ruff',
    'mypy'
]

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = '-q'

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = '3.10'
ignore_missing_imports = true

